# libsqli

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TESTING.md  build_deb.sh  release_build.sh  test_environment.sh.template
doc/: PROTOCOL.md  README.md  coding_c11.md
include/libsqli/: sqli.h
src/: sqli.c  sqli_asc.c  sqli_batch.c  sqli_conn.c  sqli_dispatch.c  sqli_handshake.c  sqli_internal.h  sqli_log.c  sqli_log.h  sqli_msg_catalog.c  sqli_msg_catalog.h  sqli_pool.c  sqli_prepare.c  sqli_protocol_internal.h  sqli_protocol_write.c  sqli_query.c  sqli_result.c  sqli_result_internal.h  sqli_result_value.c  sqli_sqlhosts.c  sqli_tcp.c  sqli_tcp.h  sqli_tls.c  sqli_tls.h  sqli_transaction.c  sqli_types.c  sqli_unix.c  sqli_unix.h  sqli_uri.c  sqli_wire.c
test/: sqli_test_main.c  test_integration.c  test_sqli.c  test_sqli_callable.c  test_sqli_dispatch.c  test_sqli_prepare.c  test_sqli_sqlhosts.c  test_sqli_tcp.c  test_sqli_transaction.c  test_sqli_types.c  test_sqli_uri.c  test_sqli_wire.c  test_stability.c  test_wire_capture.c
tools/: build_deb.sh  generate_dump_txn_benchmark_report.sh  generate_release_artifacts.sh  generate_stress_envelope_report.sh  run_live_must_type_suite.sh  sqli_export_csv.c  sqli_prepared_probe.c  sqli_stress.c  sqlicon.1  sqlicon.h  sqlicon_cli.c  sqlicon_commands.c  sqlicon_crypto.c  sqlicon_dotcmd.c  sqlicon_exec.c  sqlicon_main.c  sqlicon_output.c  sqlicon_profile.c  sqlicon_runtime.c  sqlicon_stream.c  sqlicon_table.c  sqliconn.c
